--- a/latest/package.json
+++ b/latest/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^2.0.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -24,6 +25,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.0"
+    "vite": "^5.1.5"
   }
 }
